# celestia-adapter-evaluator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  constants.toml
.github/workflows/: publish-image.yml
src/: core.rs  main.rs
