[package]
name = "celestia-adapter-evaluator"
version = "0.1.0"
edition = "2024"
license = "Sovereign Permissionless Commercial License"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
publish = false
repository = "https://github.com/sovereign-labs/sovereign-sdk"

[dependencies]
anyhow = "1"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
bip32 = "0.5"
bip39 = "2"
tokio = { version = "1.48", features = ["full"] }
tracing = { version = "0.1.43" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# dev branch on 2026-06-25
sov-celestia-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "981915cb006a868c394597ff20bdc92e3b2826aa", features = ["native"] }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "981915cb006a868c394597ff20bdc92e3b2826aa", features = ["native"] }
